modified:   index.html 	modified:   index.xml 	modified:   post/2021-01-30-menghapus-file-dari-tar/index.html 	modified:   post/index.xml 	modified:   tags/manajemen-file/index.html 	modified:   tags/manajemen-file/index.xml 	modified:   tags/slackware/index.html 	modified:   tags/slackware/index.xml

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
   <p>
   Untuk menghapus file Screenshot_2020-08-06_08-31-22.png yang ada dalam screenshot.tar.xz, caranya
-$ tar f screenshot.tar.xz --delete Screenshot\_2020-08-06\_08-31-22.png 
+$ tar f screenshot.tar.xz --delete Screenshot_2020-08-06_08-31-22.png 
   </p>
 
   
