--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ import pandas as pd data = pd.read\_csv(&#34;Alzheimer\_s\_Disease\_and\_Healthy
   </header>
 
   <p>
-  Untuk menampilkan data baris pertama dengan python dapat menggunakan fungsi tail() dari pandas. Tuliskan banyaknya baris yang akan ditampilkan (n) dalam tanda kurung. Kalau n tidak ditulis maka secara default n=5.
+  Untuk menampilkan data baris terakhir dengan python dapat menggunakan fungsi tail() dari pandas. Tuliskan banyaknya baris yang akan ditampilkan (n) dalam tanda kurung. Kalau n tidak ditulis maka secara default n=5.
 Data diambil dari https://catalog.data.gov/dataset/alzheimers-disease-and-healthy-aging-data/
 import pandas as pd data = pd.read\_csv(&#34;Alzheimer\_s\_Disease\_and\_Healthy\_Aging\_Data.csv&#34;) print(data.tail(7)) Output :
  RowId ... Report 178532 2019~2019~9004~Q41~AGE~AGE_OVERALL~RACE~NAA ... NaN 178533 2019~2019~9002~Q41~AGE~AGE_OVERALL~GENDER~MALE ... NaN 178534 2019~2019~9002~Q42~AGE~5064~RACE~HIS ... NaN 178535 2019~2019~9003~Q42~AGE~65PLUS~RACE~ASN ... NaN 178536 2019~2019~9002~Q42~AGE~65PLUS~RACE~HIS ... NaN 178537 2019~2019~9003~Q42~AGE~5064~RACE~BLK .
