modified:   index.html 	modified:   index.xml 	modified:   post/2021-06-02-hapus-awalan-apostrofe-libreoffice-calc/index.html 	modified:   post/index.xml 	modified:   tags/office/index.html 	modified:   tags/office/index.xml 	modified:   tags/slackware/index.html 	modified:   tags/slackware/index.xml

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ Mungkin, ketika sedang melakukan maintenance dalam mode tty, tanpa terasa sudah 
 
   <p>
   Mengunduh file spreadsheet dari google sheets di setiap selnya yang berisi data angka diawali oleh tanda apostrofe atau kutip tunggal. Tanda ini tidak terlihat langsung. Ketika kita klik selnya dan lihat formula bar, baru tanda ini terlihat.
-Untuk menghapusnya melalui libreofiice calc tentu saja. Klik Find &amp; Replace. Search for inputkan .* dan **Replace with** inputkan &amp;. Centang atau piih opsi **Regular expressions**. Kemudian **Replace** atau **Replace all** sesuai kebutuhan.
+Untuk menghapusnya melalui libreofiice calc tentu saja. Klik Find &amp; Replace. Search for inputkan .* dan Replace with inputkan &amp;. Centang atau piih opsi Regular expressions. Kemudian Replace atau Replace all sesuai kebutuhan.
   </p>
 
   
