modified:   index.html 	modified:   index.xml 	modified:   post/2021-11-28-variabel-array-perl/index.html 	modified:   post/index.xml 	modified:   tags/perl/index.html 	modified:   tags/perl/index.xml 	modified:   tags/slackware/index.html 	modified:   tags/slackware/index.xml

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ my %data = ( nama =&gt; &#34;Sasongko&#34;, distro =&gt; &#34;Slackware&#34;, );
 Berbeda dengan scalar yang bernilai tunggal, array bernilai majemuk. Array merupakan himpunan. Element array zero indexed, artinya, elemen pertama berindeks 0.
 Pendeklarasian array diserta simbol @.
 Contoh: himpunan nama-nama buah dan daftar nilai
-my @buah = (&#34;pisang&#34;, &#34;mangga&#34;, &#34;jeruk&#34;, pepaya&#34;); my @daftar_nilai = (80, 100, 76.
+my @buah = (&#34;pisang&#34;, &#34;mangga&#34;, &#34;jeruk&#34;, &#34;pepaya&#34;); my @daftar_nilai = (80, 100, 76.
   </p>
 
   
